perf: lazy-creation of Groovy engine only the 1st time is requested
(cherry picked from commit cab69111b96307342cd3a11f446d548d7e956cb1)